# weather-mcp-server

./: .gitignore  README.md  pyproject.toml
src/weather_mcp/: __init__.py  cities.py  params.py  psychrometric_service.py  server.py  weather_service.py
src/weather_mcp/tables/: __init__.py  daily_table.py  hddcdd_table.py  monthly_table.py
